# Sonoran.py

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/sonoran/: __init__.py  constants.py  instance.py  models.py
src/sonoran/managers/: __init__.py  cad.py  cms.py  radio.py
tests/: test_cad_v2.py
