[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sonoran-py"
version = "0.1.0"
description = "Python SDK for Sonoran CAD integrations"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "ISC" }
authors = [{ name = "Sonoran Software" }]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
